name:          th-extra
version:       1.0
cabal-version: >= 1.6
license:       BSD3
license-file:  LICENSE
author:        Nicolas Frisby
maintainer:    nicolas.frisby@gmail.com
category:      TemplateHaskell
synopsis:      Extra functionality for the template-haskell library
description:   Extra functionality for the template-haskell library
build-type:    Simple

Library
  build-depends: base < 6, template-haskell, containers

  build-depends: generic-deriving, th-gd

  exposed-modules: Language.Haskell.TH.TypeDec, Language.Haskell.TH.Named,
                   Language.Haskell.TH.Substitution
